Closed Bug 123996 Opened 23 years ago Closed 17 years ago

certutil -H doesn't document "certutil -C -a"

Categories

(NSS :: Tools, defect, P3)

3.3.1

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jamie-bugzilla, Assigned: julien.pierre)

References

()

Details

Attachments

(1 file)

The help page for certutil emphasizes that "certutil -C" takes a BINARY cert
request. It doesn't mention that you can specify the "-a" flag to accept an
ASCII cert request, which is what most people have anyway.
Component: Tools → Documentation
Changed the QA contact to Bishakha.
QA Contact: sonja.mirtitsch → bishakhabanerjee
Changed the component to Tools.
Component: Documentation → Tools
Changed the component back to Documentation.  I am
not myself today.
Component: Tools → Documentation
Priority: -- → P3
QA Contact: bishakhabanerjee → jason.m.reid
Assignee: wtchang → nobody
QA Contact: jason.m.reid → documentation
Actually I think tools was the right component, since the help page is in the tool itself.
Component: Documentation → Tools
QA Contact: documentation → tools
Assignee: nobody → julien.pierre.boogz
Attachment #271165 - Flags: review?(nelson)
Comment on attachment 271165 [details] [diff] [review]
Add documentation

guessing about the real MIME content type of this attachment
Attachment #271165 - Attachment mime type: application/octet-stream → text/plain
Comment on attachment 271165 [details] [diff] [review]
Add documentation

Ah, it's a patch
Attachment #271165 - Attachment is patch: true
Comment on attachment 271165 [details] [diff] [review]
Add documentation

sure, we can make this change.  But it's reaally time for someone to overhaul certutil's help/usage messages to eliminate all the duplication of information about common options.
Attachment #271165 - Flags: review?(nelson) → review+
Target Milestone: --- → 3.12
Thanks for the quick review, Nelson. The consolidation should be done in a separate bug.

I checked this in to the tip.

Checking in certutil.c;
/cvsroot/mozilla/security/nss/cmd/certutil/certutil.c,v  <--  certutil.c
new revision: 1.113; previous revision: 1.112
done
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: