Fix for bug 123996 . Document certutil -C -a . r=nelson